// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`hosted-zone-with-param for different region 1`] = `
Object {
  "Outputs": Object {
    "HostedZoneIdFC741845": Object {
      "Value": Object {
        "Ref": "HostedZoneA9DD9B89",
      },
    },
    "HostedZoneNameservers0897D4B3": Object {
      "Value": Object {
        "Fn::Join": Array [
          ", ",
          Object {
            "Fn::GetAtt": Array [
              "HostedZoneA9DD9B89",
              "NameServers",
            ],
          },
        ],
      },
    },
  },
  "Resources": Object {
    "HostedZoneA9DD9B89": Object {
      "Properties": Object {
        "Name": "example.com.",
      },
      "Type": "AWS::Route53::HostedZone",
    },
    "HostedZoneIdParamE55EE91C": Object {
      "Properties": Object {
        "Name": "/cf/hosted-zone-id/example.com-public",
        "Type": "String",
        "Value": Object {
          "Ref": "HostedZoneA9DD9B89",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
}
`;

exports[`hosted-zone-with-param for different region 2`] = `
Object {
  "Outputs": Object {
    "HostedZoneId": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "HostedZoneParam13DE3CEA",
          "Parameter.Value",
        ],
      },
    },
  },
  "Resources": Object {
    "AWS679f53fac002430cb0da5b7982bd22872D164C4C": Object {
      "DependsOn": Array [
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-us-east-1",
          },
          "S3Key": "a38f8a5114ae969de815d5c66b3ddbd646445697a789f7b16424b4ea541d4ff9.zip",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "HostedZoneParam13DE3CEA": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "HostedZoneParamCustomResourcePolicyE355AB96",
      ],
      "Metadata": Object {
        "Nonce": "1",
      },
      "Properties": Object {
        "Create": "{\\"service\\":\\"SSM\\",\\"action\\":\\"getParameter\\",\\"parameters\\":{\\"Name\\":\\"/cf/hosted-zone-id/example.com-public\\"},\\"region\\":\\"eu-west-1\\",\\"physicalResourceId\\":{\\"id\\":\\"/cf/hosted-zone-id/example.com-public\\"}}",
        "InstallLatestAwsSdk": true,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
        "Update": "{\\"service\\":\\"SSM\\",\\"action\\":\\"getParameter\\",\\"parameters\\":{\\"Name\\":\\"/cf/hosted-zone-id/example.com-public\\"},\\"region\\":\\"eu-west-1\\",\\"physicalResourceId\\":{\\"id\\":\\"/cf/hosted-zone-id/example.com-public\\"}}",
      },
      "Type": "Custom::AWS",
      "UpdateReplacePolicy": "Delete",
    },
    "HostedZoneParamCustomResourcePolicyE355AB96": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":ssm:eu-west-1:",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/cf/hosted-zone-id/example.com-public",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "HostedZoneParamCustomResourcePolicyE355AB96",
        "Roles": Array [
          Object {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`hosted-zone-with-param for same region 1`] = `
Object {
  "Outputs": Object {
    "ExportsOutputRefHostedZoneA9DD9B896D7C4880": Object {
      "Export": Object {
        "Name": "Stack1:ExportsOutputRefHostedZoneA9DD9B896D7C4880",
      },
      "Value": Object {
        "Ref": "HostedZoneA9DD9B89",
      },
    },
    "HostedZoneIdFC741845": Object {
      "Value": Object {
        "Ref": "HostedZoneA9DD9B89",
      },
    },
    "HostedZoneNameservers0897D4B3": Object {
      "Value": Object {
        "Fn::Join": Array [
          ", ",
          Object {
            "Fn::GetAtt": Array [
              "HostedZoneA9DD9B89",
              "NameServers",
            ],
          },
        ],
      },
    },
  },
  "Resources": Object {
    "HostedZoneA9DD9B89": Object {
      "Properties": Object {
        "Name": "example.com.",
      },
      "Type": "AWS::Route53::HostedZone",
    },
    "HostedZoneIdParamE55EE91C": Object {
      "Properties": Object {
        "Name": "/cf/hosted-zone-id/example.com-public",
        "Type": "String",
        "Value": Object {
          "Ref": "HostedZoneA9DD9B89",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
}
`;

exports[`hosted-zone-with-param for same region 2`] = `
Object {
  "Outputs": Object {
    "HostedZoneId": Object {
      "Value": Object {
        "Fn::ImportValue": "Stack1:ExportsOutputRefHostedZoneA9DD9B896D7C4880",
      },
    },
  },
}
`;
